# hg-bot

./: main.py  pyproject.toml
.github/workflows/: dayly-line-message.yml
playground/: 20250504_LINE_message.ipynb  20250527_kaggle通知機能.ipynb  20250528_youtube_podcast.ipynb  sent_videos.json
src/line_bot/kaggle_notification/: fetch_infomation.py  fetch_information.py
src/line_bot/line/: send_message.py
src/line_bot/nasa_api/: fetch_apod.py  new_ws.py
src/line_bot/util/: translate.py
src/line_bot/youtube_podcast/: fetch_playlist.py  save_and_send.py
