[tool.poetry]
name = "line-bot"
version = "0.1.0"
description = ""
authors = ["malibu-cola <ryhrys4269@icloud.com>"]
readme = "README.md"
packages = [
    { include = "line_bot", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
schedule = "^1.2.2"
googletrans = "^4.0.0"
kaggle = "^1.7.4.5"
ruff = "^0.11.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
